--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,8 +11,10 @@
   },
   "dependencies": {
     "@tailwindcss/postcss": "^4.1.18",
+    "@tensorflow/tfjs": "^4.22.0",
     "axios": "^1.13.2",
     "lucide-react": "^0.562.0",
+    "nsfwjs": "^4.2.1",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-router-dom": "^7.12.0"
